# used-car-sales-app

./: .dockerignore  .editorconfig  Dockerfile  Makefile  README.md  app.py  pyproject.toml
model/: 2023-01-10_Audi_A3.json
scripts/: build_model.py
